# SyslogParser

./: Cargo.toml  README.md  syslog.db
src/: main.rs
static/: app.js  index.html  style.css
syslog_sender/: Cargo.toml  README.md  syslog_sender.rs
